# MorIE

./: README.md  pyproject.toml
docs/: PLAN.md
src/: app.py
src/components/: input_frame.py  result_frame.py  spinbox.py
src/core/: logging.py  morie.py
tests/: test_morie.py
